# course-generation-agent

./: README.md  requirements.txt
apps/api/: pyproject.toml
apps/api/app/api/: deps.py
apps/api/app/api/routes/: __init__.py  events.py  experiments.py  files.py  reviews.py  threads.py
apps/api/app/application/: course_agent_use_cases.py
apps/api/app/application/experiments/: __init__.py  deepagents_service.py
apps/api/app/audit/: logger.py
apps/api/app/core/: schemas.py  settings.py  step_catalog.py
apps/api/app/files/: parser.py
apps/api/app/infrastructure/deepagents/: __init__.py  runner.py
apps/api/app/llm/: deepseek_client.py
apps/api/app/series/: __init__.py  decision_scoring.py  questionnaire.py  schema.py  scoring.py
apps/api/app/services/: course_agent.py
apps/api/app/storage/: repositories.py  thread_store.py
apps/api/app/workflows/: course_graph.py
apps/api/tests/: test_api.py  test_parser.py
apps/web/: README.md
config/: llm.yaml
data/decision_model/: decision_records.jsonl
data/series_scoring/: course_scoring_model.pkl
docs/api/: http-api.md  openapi.json
docs/architecture/: current-state-vs-target-state.md  project-structure.md  refactor-delivery.md
docs/redesign/: 00-research.md  01-system-overview.md  02-conversation-state-machine.md  03-data-model.md  04-api-contract.md  05-llm-provider-and-prompt-strategy.md  06-regeneration-and-feedback.md  07-deepagents-experiment-design.md  08-contributing-workflow.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: export_openapi.py
(+18 files in other folders)
